[gd_scene load_steps=10 format=3 uid="uid://bamp35jrqrnh"]

[ext_resource type="Script" path="res://code/player.gd" id="1_nj2o8"]
[ext_resource type="Texture2D" uid="uid://cv4kdj5hok6fi" path="res://images/newPlayer.png" id="2_bxn2s"]
[ext_resource type="Texture2D" uid="uid://bhtnmgpyfft3r" path="res://images/playerHit.png" id="3_fbavv"]
[ext_resource type="AudioStream" uid="uid://dj3wr6jtc2cbu" path="res://sounds/playershoot.wav" id="3_nqxiv"]
[ext_resource type="Texture2D" uid="uid://cderq6wpgh5gc" path="res://images/playerHit2.png" id="4_fth6g"]
[ext_resource type="AudioStream" uid="uid://cw77p4thprlcb" path="res://sounds/playerhit.wav" id="4_wrwp1"]
[ext_resource type="AudioStream" uid="uid://s1kgksojs7x5" path="res://sounds/playerDeath.wav" id="7_pq3yh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kbac6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bxn2s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.25,
"texture": ExtResource("3_fbavv")
}, {
"duration": 0.5,
"texture": ExtResource("4_fth6g")
}],
"loop": true,
"name": &"on_hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xm752"]
radius = 43.1856

[node name="Player" type="Area2D"]
process_mode = 1
position = Vector2(551, 332)
script = ExtResource("1_nj2o8")
metadata/_edit_group_ = true

[node name="PlayerModel" type="AnimatedSprite2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
position = Vector2(-3, -3)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_kbac6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 8
shape = SubResource("CircleShape2D_xm752")

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nqxiv")
volume_db = -8.169

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wrwp1")
volume_db = -7.836

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pq3yh")
volume_db = -10.685

[node name="HealthRegenTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_enemy_bullet_collision"]
[connection signal="timeout" from="HealthRegenTimer" to="." method="_on_health_regen_timer_timeout"]
